--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@auth/prisma-adapter": "^1.0.5",
     "@heroicons/react": "^2.1.1",
     "@prisma/client": "^6.8.2",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "cookie": "^0.5.0",
@@ -42,9 +44,9 @@
     "@types/formidable": "^2.0.5",
     "@types/node": "^18.18.0",
     "@types/react": "^18.2.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.4",
+    "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
