--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^9.0.0",
     "lucide-react": "^0.511.0",
     "mailgun.js": "^5.2.2",
+    "nodemailer": "^6.9.13",
     "next": "13.5.6",
     "next-auth": "^4.24.2",
     "prisma": "^6.8.2",
