--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie": "^0.5.1",
     "@types/formidable": "^2.0.5",
+    "@types/nodemailer": "^6.4.7",
     "@types/node": "^18.18.0",
     "@types/react": "^18.2.0",
     "autoprefixer": "^10.4.21",
