--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "postcss": "^8.5.4",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "@types/uuid": "^9.0.2"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
