--- a/package.json
+++ b/package.json
@@ -26,21 +26,21 @@
     "i18next-browser-languagedetector": "^8.1.0",
     "i18next-http-backend": "^3.0.2",
     "jsonwebtoken": "^9.0.0",
-    "lucide-react": "^0.519.0",
+    "lucide-react": "^0.511.0",
     "mailgun.js": "^5.2.2",
     "nodemailer": "^6.9.13",
     "next": "13.5.6",
     "next-auth": "^4.24.2",
     "prisma": "^6.8.2",
     "ra-data-simple-rest": "^5.8.3",
-    "react-icons": "^4.10.1",
     "react-qr-code": "^2.0.7",
     "react-device-detect": "^2.2.2",
     "react": "18.2.0",
     "react-admin": "^5.8.3",
     "react-dom": "18.2.0",
     "react-i18next": "^13.2.2",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "react-icons": "^4.10.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
