--- a/package.json
+++ b/package.json
@@ -28,33 +28,34 @@
     "jsonwebtoken": "^9.0.0",
     "lucide-react": "^0.511.0",
     "mailgun.js": "^5.2.2",
-    "nodemailer": "^6.9.13",
     "next": "13.5.6",
     "next-auth": "^4.24.2",
+    "nodemailer": "^6.9.13",
     "prisma": "^6.8.2",
     "ra-data-simple-rest": "^5.8.3",
-    "react-qr-code": "^2.0.7",
-    "react-device-detect": "^2.2.2",
     "react": "18.2.0",
     "react-admin": "^5.8.3",
+    "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.5.2",
     "react-i18next": "^13.2.2",
-    "react-toastify": "^9.1.3",
-    "react-icons": "^4.10.1"
+    "react-icons": "^4.10.1",
+    "react-qr-code": "^2.0.7",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie": "^0.5.1",
     "@types/formidable": "^2.0.5",
-    "@types/nodemailer": "^6.4.7",
     "@types/node": "^18.18.0",
+    "@types/nodemailer": "^6.4.7",
     "@types/react": "^18.2.0",
+    "@types/uuid": "^9.0.2",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.4",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2",
-    "@types/uuid": "^9.0.2"
+    "typescript": "^5.2.2"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
