--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cookie": "^0.5.0",
     "dotenv": "^16.5.0",
     "dotenv-cli": "^8.0.0",
+    "framer-motion": "^11.0.0",
     "form-data": "^4.0.2",
     "formidable": "^2.1.1",
     "i18next": "^23.2.3",
@@ -46,6 +47,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie": "^0.5.1",
+    "@types/framer-motion": "^6.0.0",
     "@types/formidable": "^2.0.5",
     "@types/node": "^18.18.0",
     "@types/nodemailer": "^6.4.7",
