--- a/.github/workflows/rotate-passwords.yml
+++ b/.github/workflows/rotate-passwords.yml
@@ -1,8 +1,9 @@
+# .github/workflows/rotate-passwords.yml
 name: Rotate QR Access Passwords
 
 on:
   schedule:
-    - cron: '0 2 * * *'  # jeden Tag um 2:00 Uhr UTC (also 4:00 Uhr morgens in Deutschland)
+    - cron: '0 2 * * *'  # täglich um 2:00 Uhr UTC (4:00 deutscher Zeit)
   workflow_dispatch:
 
 jobs:
@@ -10,4 +11,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Trigger password rotation API
-        run: curl -X POST https://meinlohn.app/api/team/rotate-all-access-passwords -H "x-api-key: ${{ secrets.CRON_KEY }}"
+        run: |
+          curl -X POST https://meinlohn.app/api/team/rotate-all-access-passwords \
+            -H "x-api-key: ${{ secrets.CRON_KEY }}"
