--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@auth/prisma-adapter": "^1.0.5",
     "@heroicons/react": "^2.1.1",
     "@prisma/client": "^6.8.2",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.6.7",
