--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "next start",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
-    "postinstall": "prisma db push --accept-data-loss && prisma generate",
+    "postinstall": "prisma db push && prisma generate",
     "db:push": "prisma db push",
     "seed": "ts-node prisma/seed.ts"
   },
