--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "i18next-http-backend": "^3.0.2",
     "jsonwebtoken": "^9.0.0",
     "lucide-react": "^0.511.0",
+    "konva": "^9.3.0",
+    "react-konva": "^18.0.5",
     "mailgun.js": "^5.2.2",
     "next": "13.5.6",
     "next-auth": "^4.24.2",
@@ -54,6 +56,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie": "^0.5.1",
     "@types/formidable": "^2.0.5",
+    "@types/konva": "^8.3.5",
     "@types/node": "^18.18.0",
     "@types/nodemailer": "^6.4.7",
     "@types/react": "^18.2.0",
