--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "react-icons": "^4.10.1",
     "react-qr-code": "^2.0.7",
     "react-toastify": "^9.1.3",
-    "recharts": "^2.15.3"
+    "recharts": "^2.15.3",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
