--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-hot-toast": "^2.5.2",
     "react-i18next": "^13.2.2",
     "react-icons": "^4.10.1",
+    "react-konva-utils": "^1.0.4",
     "react-qr-code": "^2.0.7",
     "react-toastify": "^9.1.3",
     "recharts": "^2.15.3",
