--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "form-data": "^4.0.2",
     "formidable": "^2.1.1",
     "framer-motion": "^11.0.0",
+    "use-image": "^1.0.1",
     "i18next": "^23.2.3",
     "i18next-browser-languagedetector": "^8.1.0",
     "i18next-http-backend": "^3.0.2",
