--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "react-konva-utils": "^1.0.4",
     "react-qr-code": "^2.0.7",
     "react-toastify": "^9.1.3",
-    "zustand": "^4.4.0"
+    "zustand": "^4.4.0",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
