--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "lohnsystem",
   "version": "0.0.050",
   "scripts": {
-    "dev": "next dev",
-    "build": "prisma db push && next build",
-    "start": "next start",
-    "lint": "eslint . --ext .ts,.tsx",
-    "lint:fix": "eslint . --ext .ts,.tsx --fix",
-    "postinstall": "prisma db push && prisma generate",
-    "db:push": "prisma db push",
-    "seed": "ts-node prisma/seed.ts"
-  },
+  "dev": "next dev",
+  "build": "prisma db push && next build",
+  "start": "next start",
+  "lint": "eslint \"src/**/*.{ts,tsx}\"",
+  "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
+  "postinstall": "prisma db push && prisma generate",
+  "db:push": "prisma db push",
+  "seed": "ts-node prisma/seed.ts"
+}
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.5",
     "@heroicons/react": "^2.1.1",
@@ -51,9 +51,7 @@
     "react-konva-utils": "^1.0.4",
     "react-qr-code": "^2.0.7",
     "react-toastify": "^9.1.3",
-    "zustand": "^4.4.0",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
