--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "lohnsystem",
-  "version": "0.0.050",
+  "version": "0.0.50",
   "scripts": {
-  "dev": "next dev",
-  "build": "prisma db push && next build",
-  "start": "next start",
-  "lint": "eslint \"src/**/*.{ts,tsx}\"",
-  "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
-  "postinstall": "prisma db push && prisma generate",
-  "db:push": "prisma db push",
-  "seed": "ts-node prisma/seed.ts"
-}
+    "dev": "next dev",
+    "build": "prisma db push && next build",
+    "start": "next start",
+    "lint": "eslint \"src/**/*.{ts,tsx}\"",
+    "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
+    "postinstall": "prisma db push && prisma generate",
+    "db:push": "prisma db push",
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.5",
     "@heroicons/react": "^2.1.1",
@@ -74,8 +74,7 @@
     "prettier": "^3.5.3",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.1",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.33.1"
+    "typescript": "^5.8.3"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
