--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
-{
-  "name": "lohnsystem",
+name": "lohnsystem",
   "version": "0.0.50",
   "scripts": {
     "dev": "next dev",
@@ -76,7 +75,3 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.8.3"
   },
-  "prisma": {
-    "seed": "ts-node prisma/seed.ts"
-  }
-}
