--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-name": "lohnsystem",
+{
+  "name": "lohnsystem",
   "version": "0.0.50",
   "scripts": {
     "dev": "next dev",
@@ -40,17 +41,6 @@ name": "lohnsystem",
     "react-hot-toast": "^2.5.2",
     "react-i18next": "^13.2.2",
     "zustand": "^4.4.0"
-
-    // ❌ Entfernt, vermutlich nicht benötigt – ggf. bei Bedarf wieder einfügen:
-    // "mailgun.js": "^5.2.2",             // Wird nicht mehr verwendet (du nutzt Brevo)
-    // "form-data": "^4.0.2",              // Meist nur mit Mailgun benötigt
-    // "dotenv-cli": "^8.0.0",             // Wird durch Next.js/Prisma intern erledigt
-    // "use-image": "^1.0.1",              // Nur nötig, wenn du Bilder in Konva lädst
-    // "ra-data-simple-rest": "^5.8.3",    // Nur relevant bei REST-API in react-admin
-    // "react-icons": "^4.10.1",           // Wenn du ausschließlich lucide-react nutzt
-    // "react-toastify": "^9.1.3",         // Doppelt – du nutzt bereits react-hot-toast
-    // "react-qr-code": "^2.0.7",          // Nur wenn du diesen QR-Renderer nutzt
-    // "react-device-detect": "^2.2.2"     // Nur nötig, wenn du device checks brauchst
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
@@ -75,3 +65,7 @@ name": "lohnsystem",
     "ts-node": "^10.9.1",
     "typescript": "^5.8.3"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  }
+}
