--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "db:push": "prisma db push",
     "seed": "ts-node prisma/seed.ts"
   },
+  "resolutions": {
+    "react-admin": "5.8.3"
+  },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.5",
     "@heroicons/react": "^2.1.1",
