--- a/package.json
+++ b/package.json
@@ -11,9 +11,6 @@
     "db:push": "prisma db push",
     "seed": "ts-node prisma/seed.ts"
   },
-  "resolutions": {
-    "react-admin": "5.8.3"
-  },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.5",
     "@heroicons/react": "^2.1.1",
@@ -41,10 +38,16 @@
     "react": "18.2.0",
     "react-admin": "^5.8.3",
     "ra-core": "^5.8.3",
+    "ra-data-simple-rest": "^5.8.3",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.5.2",
     "react-i18next": "^13.2.2",
     "zustand": "^4.4.0"
+  },
+  "overrides": {
+    "react-admin": "5.8.3",
+    "ra-core": "5.8.3",
+    "ra-data-simple-rest": "5.8.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
