--- a/package.json
+++ b/package.json
@@ -36,18 +36,13 @@
     "nodemailer": "^6.9.13",
     "prisma": "^6.8.2",
     "react": "18.2.0",
-    "react-admin": "^5.8.3",
-    "ra-core": "^5.8.3",
-    "ra-data-simple-rest": "^5.8.3",
+    "react-admin": "5.8.3",
+    "ra-core": "5.8.3",
+    "ra-data-simple-rest": "5.8.3",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.5.2",
     "react-i18next": "^13.2.2",
     "zustand": "^4.4.0"
-  },
-  "overrides": {
-    "react-admin": "5.8.3",
-    "ra-core": "5.8.3",
-    "ra-data-simple-rest": "5.8.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
