--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
-  "build": {
-    "cache": []
-  }
+  "builds": [
+    { "src": "next.config.js", "use": "@vercel/next" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/" }
+  ]
 }
