--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.1.1",
     "@prisma/client": "^6.8.2",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-admin/ra-data-simple-rest": "4.12.5",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.6.7",
@@ -27,19 +28,18 @@
     "i18next-browser-languagedetector": "^8.1.0",
     "i18next-http-backend": "^3.0.2",
     "jsonwebtoken": "^9.0.0",
-    "lucide-react": "^0.511.0",
     "konva": "^9.3.0",
-    "react-konva": "^18.0.5",
+    "lucide-react": "^0.511.0",
     "next": "13.5.6",
     "next-auth": "^4.24.2",
     "nodemailer": "^6.9.13",
     "prisma": "^6.8.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
     "react-admin": "4.12.5",
-    "ra-data-simple-rest": "4.12.5",
+    "react-dom": "18.2.0",
     "react-hot-toast": "^2.5.2",
     "react-i18next": "^13.2.2",
+    "react-konva": "^18.0.5",
     "zustand": "^4.4.0"
   },
   "devDependencies": {
