--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@heroicons/react": "^2.1.1",
     "@prisma/client": "^6.8.2",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@react-admin/ra-data-simple-rest": "4.12.5",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.6.7",
@@ -36,6 +35,7 @@
     "prisma": "^6.8.2",
     "react": "18.2.0",
     "react-admin": "4.12.5",
+    "ra-data-simple-rest": "4.12.5",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.5.2",
     "react-i18next": "^13.2.2",
