--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "konva": "^9.3.0",
     "lucide-react": "^0.511.0",
     "next": "13.5.6",
+    "@headlessui/react": "^2.2.4",
     "next-auth": "^4.24.2",
     "nodemailer": "^6.9.13",
     "prisma": "^6.8.2",
