--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next-auth": "^4.24.2",
     "nodemailer": "^6.9.13",
     "prisma": "^6.8.2",
+    "use-image": "^1.1.2",
     "react": "18.2.0",
     "react-admin": "4.16.18",
     "ra-data-simple-rest": "4.16.2",
