--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-admin": "4.16.18",
     "ra-data-simple-rest": "4.16.2",
     "react-dom": "18.2.0",
+    "react-qr-code": "^2.0.7",
     "react-hot-toast": "^2.5.2",
     "react-i18next": "^13.2.2",
     "react-konva": "^18.0.5",
