--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "18.2.0",
     "react-qr-code": "^2.0.7",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.2.1",
     "react-i18next": "^13.2.2",
     "react-konva": "^18.0.5",
     "zustand": "^4.4.0"
