--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-icons": "^5.2.1",
     "react-i18next": "^13.2.2",
     "react-konva": "^18.0.5",
+    "react-device-detect": "^2.2.2",
     "zustand": "^4.4.0"
   },
   "devDependencies": {
