--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
+    "@types/react-dom": "^18.0.14",
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie": "^0.5.1",
     "@types/formidable": "^2.0.5",
