--- a/package.json
+++ b/package.json
@@ -8,18 +8,21 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "db:push": "prisma db push",
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node prisma/seed.ts",
+    "pretest:smoke": "prisma generate",
+    "test:smoke": "cross-env NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.5",
+    "@auth/prisma-adapter": "^2.9.1",
+    "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.1.1",
-    "@prisma/client": "^6.8.2",
+    "@prisma/client": "^6.10.1",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
-    "cookie": "^0.5.0",
+    "cookie": "^1.0.2",
     "dotenv": "^16.5.0",
     "formidable": "^2.1.1",
     "framer-motion": "^11.0.0",
@@ -29,51 +32,59 @@
     "jsonwebtoken": "^9.0.0",
     "konva": "^9.3.0",
     "lucide-react": "^0.511.0",
-    "next": "13.5.6",
-    "@headlessui/react": "^2.2.4",
+    "next": "^14.2.30",
     "next-auth": "^4.24.2",
     "nodemailer": "^6.9.13",
-    "prisma": "^6.8.2",
-    "use-image": "^1.1.2",
-    "recharts": "^2.9.0",
+    "ra-data-simple-rest": "^5.8.4",
     "react": "18.2.0",
-    "react-admin": "4.16.18",
-    "ra-data-simple-rest": "4.16.2",
-    "react-toastify": "^11.0.5",
-    "react-dom": "18.2.0",
-    "react-qr-code": "^2.0.7",
-    "react-hot-toast": "^2.5.2",
-    "react-icons": "^5.2.1",
-    "react-i18next": "^13.2.2",
-    "react-konva": "^18.0.5",
+    "react-admin": "^5.8.4",
     "react-device-detect": "^2.2.2",
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.5.2",
+    "react-i18next": "^13.2.2",
+    "react-icons": "^5.2.1",
+    "react-konva": "^18.0.5",
+    "react-qr-code": "^2.0.7",
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.9.0",
+    "use-image": "^1.1.2",
     "zustand": "^4.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
-    "@types/react-dom": "^18.0.14",
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie": "^0.5.1",
     "@types/formidable": "^2.0.5",
+    "@types/jest": "^29.5.14",
     "@types/node": "^18.18.0",
     "@types/nodemailer": "^6.4.7",
     "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.0.14",
     "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
     "@typescript-eslint/parser": "^8.33.1",
     "autoprefixer": "^10.4.21",
+    "cross-env": "^7.0.3",
     "eslint": "^9.28.0",
     "eslint-config-next": "15.3.3",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.1",
+    "jest": "^29.7.0",
     "jiti": "^2.4.2",
+    "next-test-api-route-handler": "^4.0.16",
     "postcss": "^8.5.4",
     "prettier": "^3.5.3",
+    "prisma": "^6.10.1",
+    "supertest": "^7.1.1",
     "tailwindcss": "^3.4.17",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.8.3"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
+  },
+  "overrides": {
+    "cookie": "^1.0.2"
   }
 }
