--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@auth/prisma-adapter": "^2.9.1",
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.1.1",
+    "@next/swc-win32-x64-msvc": "^15.3.4",
     "@prisma/client": "^6.10.1",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/forms": "^0.5.10",
@@ -32,7 +33,7 @@
     "jsonwebtoken": "^9.0.0",
     "konva": "^9.3.0",
     "lucide-react": "^0.511.0",
-    "next": "^14.2.30",
+    "next": "^15.3.4",
     "next-auth": "^4.24.2",
     "nodemailer": "^6.9.13",
     "ra-data-simple-rest": "^5.8.4",
