--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@auth/prisma-adapter": "^2.9.1",
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.1.1",
-    "@next/swc-win32-x64-msvc": "^15.3.4",
     "@prisma/client": "^6.10.1",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/forms": "^0.5.10",
@@ -37,10 +36,10 @@
     "next-auth": "^4.24.2",
     "nodemailer": "^6.9.13",
     "ra-data-simple-rest": "^5.8.4",
-    "react": "18.2.0",
+    "react": "^18.3.1",
     "react-admin": "^5.8.4",
     "react-device-detect": "^2.2.2",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
     "react-i18next": "^13.2.2",
     "react-icons": "^5.2.1",
