--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "db:push": "prisma db push",
     "seed": "ts-node prisma/seed.ts",
     "pretest:smoke": "prisma generate",
-    "test:smoke": "cross-env NODE_OPTIONS=--experimental-vm-modules jest"
+    "test:smoke": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
+    "postinstall": "prisma db push --accept-data-loss && prisma generate"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
