--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   }
 ,
   "dependencies": {
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.2.2",
     "@auth/prisma-adapter": "^2.9.1",
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.1.1",
@@ -54,6 +57,7 @@
     "zustand": "^4.4.0"
   },
   "devDependencies": {
+    "tailwindcss-animate": "^1.0.7",
     "@eslint/js": "^9.28.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie": "^0.5.1",
