--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "jsonwebtoken": "^9.0.0",
     "konva": "^9.3.0",
     "lucide-react": "^0.511.0",
+    "react-hook-form": "^7.43.9",
+    "zod": "^3.21.4",
+    "@hookform/resolvers": "^2.9.10",
     "next": "^15.3.4",
     "next-auth": "^4.24.2",
     "nodemailer": "^6.9.13",
