--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-hook-form": "^7.43.9",
     "zod": "^3.21.4",
     "@hookform/resolvers": "^2.9.10",
+    "swr": “^2.1.0”,
     "next": "^15.3.4",
     "next-auth": "^4.24.2",
     "nodemailer": "^6.9.13",
